--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@mui/icons-material": "^7.1.2",
     "@mui/material": "^7.1.2",
     "@mui/x-data-grid": "^8.6.0",
+    "@mui/x-date-pickers": "^8.7.0",
     "@reduxjs/toolkit": "^2.8.2",
+    "dayjs": "^1.11.13",
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
